# make-python-devex

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Brewfile  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml
.github/: dco.yml  dependabot.yml  renovate.json5
.github/workflows/: dependabot-automerge.yaml  make-based-ci.yml  makefile.yml  poetry-checks.yml  pre-commit-updates.yml  zizmor.yml
example/: __init__.py
tests/unit/: test_main.py
